update background color of bar component.

--- a/src/bars.css
+++ b/src/bars.css
@@ -18,14 +18,6 @@
     background-color: green;
 }
 
-.status-bars{
-    display: flex;
-    position: relative;
-    margin: 5px;
-    width: 10px;
-    height: 40px;
-    background-color: rgb(255, 0, 0) !important; 
-}
 .bar-content .tooltip {
     visibility: hidden;
     width: 176px;
@@ -52,8 +44,7 @@
     visibility: visible;
 }
 
-
-.status-bars {
+.green {
     display: flex;
     position: relative;
     margin: 5px;
@@ -61,8 +52,7 @@
     height: 40px;
     background-color: green;
 }
-
-.status-bars .tooltip {
+.green .tooltip {
     visibility: hidden;
     width: 176px;
     background: rgba(224, 224, 224, 1);
@@ -84,11 +74,77 @@
     flex-direction: column;
 }
 
-.status-bars:hover .tooltip {
+.green:hover .tooltip {
     visibility: visible;
 }
 
-.tooltip span h3 {
-    font-size: 20px;
-    padding-bottom: 10px;
+.red{
+    display: flex;
+    position: relative;
+    margin: 5px;
+    width: 10px;
+    height: 40px;
+    background-color: rgb(255, 5, 5);
 }
+
+.red .tooltip {
+    visibility: hidden;
+    width: 176px;
+    background: rgba(224, 224, 224, 1);
+    height: 61px;
+    color: black;
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -36px;
+    left: 50%;
+    margin-left: -60px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.red:hover .tooltip {
+    visibility: visible;
+}
+
+.yellow{
+    display: flex;
+    position: relative;
+    margin: 5px;
+    width: 10px;
+    height: 40px;
+    background-color: yellow;
+}
+
+.yellow .tooltip {
+    visibility: hidden;
+    width: 176px;
+    background: rgba(224, 224, 224, 1);
+    height: 61px;
+    color: black;
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -36px;
+    left: 50%;
+    margin-left: -60px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.yellow:hover .tooltip {
+    visibility: visible;
+}
+
