updated css property

--- a/src/header.css
+++ b/src/header.css
@@ -29,7 +29,7 @@
 .data-time{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .header-bottom{
