--- a/src/assets.css
+++ b/src/assets.css
@@ -5,13 +5,14 @@
 }
 
 .search-input {
+    position: relative;
     margin: auto;
     width: 100%;
-    max-width: 85%;  
+    max-width: 85%;
     margin-bottom: 50px;
 }
+
 .search-input input {
-    position: relative;
     width: 100%;
     height: 55px;
     font-size: 22px;
@@ -19,9 +20,17 @@
     background: lightgray;
     border: 3px solid black;
 }
-.search-input span{
+
+.search-input span {
     position: absolute;
     left: 280px;
     top: 315px;
 }
 
+.search-icon {
+    position: absolute;
+    right: 20px;
+    left: 15px;
+    bottom: 12px;
+
+}
