--- a/src/assetsbox.css
+++ b/src/assetsbox.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+.accordion-item {}
+
 .main-assets-title {
     display: flex;
     height: 55px;
@@ -29,27 +31,32 @@
     width: 162px;
     justify-content: space-between;
     margin-top: 10px;
-   
+
 }
 
 .status-bar-title {
-    font-size: 24px;
-    font-weight: 900;
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
 }
-.status-bar-title p{
-    color: #ffffff;
-    text-shadow: -1px -1px 1px rgba(255, 255, 255, .1), 1px 1px 1px rgba(0, 0, 0, .5);
+
+.status-bar-title p {
+    color: #3ba55c;
+}
+.status-bar-title h5 {
+    color: #000000;
+    font-weight: 400;
+    font-size: 18px;
+
 }
 .open-time {
     display: flex;
     align-items: center;
-    flex-direction: column;
     font-size: 18px;
 }
 
-.open-time h4{
+.open-time h4 {
     color: #000000;
-    text-shadow: -1px -1px 1px rgba(255, 255, 255, .1), 1px 1px 1px rgba(0, 0, 0, .5);
 }
 
 
@@ -60,11 +67,11 @@
     width: 100%;
 }
 
-.wrapper {
+/* .wrapper {
     width: 100%;
     max-width: 85%;
     margin: 30px auto;
-}
+} */
 
 .status-bar-container {
     display: flex;
@@ -93,14 +100,16 @@
     padding-left: 30px;
     padding-right: 10px;
     color: white;
-    background-color: #3ba55c;
     font-weight: 900;
-    border: solid 3px rgb(0, 0, 0);
+    color: #000;
+    border-bottom: 1px solid #E0E0E0;
     cursor: pointer;
-    width: 100%;
     align-items: center;
-    margin: auto;
-    max-width: 85%;
+}
+
+.accordion-title:hover {
+    color: white;
+    background-color: black;
 }
 
 .minus {
@@ -130,7 +139,7 @@
 
 .panel-close {
     box-sizing: border-box;
-    padding: 0.5rem 1rem 0 1rem;
+    /* padding: 0.5rem 1rem 0 1rem; */
     opacity: 0;
     width: 100%;
     max-width: 85%;
@@ -138,19 +147,19 @@
     margin: auto;
     overflow: hidden;
 }
-
+.status-text{
+    margin-top: 36px;
+    height: 120px;
+}
 .panel-open {
     overflow: hidden;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 1rem;
+   
     box-sizing: border-box;
     opacity: 1;
-    width: 100%;
-    max-width: 85%;
-    height: auto;
+    height: 173px;
     margin: auto;
-    margin-bottom: 20px;
- background-color: #d3d3d3;
-    border: 3px solid black;
+    border-bottom: 1px solid #E0E0E0;
 }
 
 .status-bars {
