--- a/src/bars.css
+++ b/src/bars.css
@@ -13,7 +13,7 @@
 .status-bar__text {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-end;
     font-size: 18px;
 }
@@ -21,19 +21,17 @@
 .uptime__text {
     display: flex;
     align-items: center;
-    flex-direction: column;
     margin-right: 20px;
 }
 
 .uptime__text h4 {
     color: #000000;
-    text-shadow: -1px -1px 1px rgba(255, 255, 255, .1), 1px 1px 1px rgba(0, 0, 0, .5);
 }
 
 .bar-content {
     display: flex;
     position: relative;
-    margin: 5px;
+    margin: 3px;
     width: 10px;
     height: 40px;
     border: 1px solid black;
@@ -51,7 +49,7 @@
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    top: -36px;
+    top: -65px;
     left: 50%;
     margin-left: -60px;
     display: flex;
