--- a/src/bars.css
+++ b/src/bars.css
@@ -11,21 +11,36 @@
 }
 
 .status-bar__text {
-    width: 100%;
+    color: #aaa;
+    margin-top: 10px;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    font-size: 18px;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: .875rem;
 }
 
 .uptime__text {
     display: flex;
     align-items: center;
-    margin-right: 20px;
+    
 }
 
 .uptime__text h4 {
-    color: #000000;
+    color: #72767d;
+}
+
+.open-time {
+    display: flex;
+    align-items: center;
+    
+}
+
+.space {
+    flex: 1;
+    margin: 0.75rem 1rem 0 1rem;
+    height: 1px;
+    background: #72767d;
+    opacity: 0.3;
 }
 
 .bar-content {
@@ -34,7 +49,6 @@
     margin: 3px;
     width: 10px;
     height: 40px;
-    border: 1px solid black;
 }
 
 .tooltip {
@@ -50,7 +64,7 @@
     position: absolute;
     z-index: 1;
     top: -65px;
-    left: 50%;
+    left: -100%;
     margin-left: -60px;
     display: flex;
     justify-content: space-evenly;
@@ -67,8 +81,9 @@
 .main-bar-container {
     width: 100%;
     margin: auto;
+    margin-top: 34px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 
@@ -81,5 +96,5 @@
 }
 
 .greenOne {
-    background-color: green !important;
+    background-color: #3ba55c!important;
 }
