updated responsiveness of bar-container

--- a/src/assests.css
+++ b/src/assests.css
@@ -1,18 +1,29 @@
 .accordion-wrapper{
-    width: 100%;
+    width: 833px;
     border: 1px solid #E0E0E0;
     border-radius: 5px;
-    max-width: 45%;
+    max-width: 90%;
     margin: auto;
 }
+
 @media only screen and (max-width: 1400px){
     .accordion-wrapper{
-        max-width: 61%;
+        max-width: 60%;
     }
 }
 @media only screen and (max-width: 1200px){
     .accordion-wrapper{
-        max-width: 70%;
+        max-width: 75%;
     }
 }
 
+@media only screen and (max-width: 992px) {
+    .accordion-wrapper{
+        max-width: 90%;
+    }
+}
+@media only screen and (max-width: 768px ) {
+    .accordion-wrapper{
+        max-width: 90%;
+    }
+}
