--- a/src/assetsbox.css
+++ b/src/assetsbox.css
@@ -98,7 +98,7 @@
 
 .accordion-title:hover {
     color: white;
-    border: 3px solid #E0E0E0;
+    border: 1px solid white;
     background-color: black;
 }
 
