updated accordion opening and closing logic

--- a/src/assets.css
+++ b/src/assets.css
@@ -57,3 +57,34 @@
     bottom: 15px;
 
 }
+
+.accordion-wrapper{
+    width: 833px;
+    border: 1px solid #E0E0E0;
+    border-radius: 5px;
+    max-width: 90%;
+    margin: auto;
+    
+}
+
+@media only screen and (max-width: 1400px){
+    .accordion-wrapper{
+        max-width: 60%;
+    }
+}
+@media only screen and (max-width: 1200px){
+    .accordion-wrapper{
+        max-width: 75%;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .accordion-wrapper{
+        max-width: 90%;
+    }
+}
+@media only screen and (max-width: 768px ) {
+    .accordion-wrapper{
+        max-width: 90%;
+    }
+}
