--- a/src/bars.css
+++ b/src/bars.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     font-size: .875rem;
 }
 
@@ -31,7 +32,6 @@
 
 .space {
     flex: 1;
-    margin: 0.75rem 1rem 0 1rem;
     height: 1px;
     background: #72767d;
     opacity: 0.3;
