added tooltip pointer

--- a/src/assetsbox.css
+++ b/src/assetsbox.css
@@ -140,12 +140,16 @@
 }
 
 .panel-open {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     border: 1px solid;
     border-radius: 3px;
     overflow: hidden;
     padding: 1rem 1rem 1rem 1rem;
     box-sizing: border-box;
     opacity: 1;
+    height: 196px;
     margin: auto;
     margin: 10px;
 }
