--- a/src/bars.css
+++ b/src/bars.css
@@ -121,7 +121,6 @@
 }
 
 .tooltip-arrow-center {
-    border: 1px solid black;
     border-radius: 3px;
     position: relative;
 }
@@ -162,8 +161,6 @@
 }
 
 .tooltip-arrow-center:before {
-    border-color: rgba(255, 255, 255, 0);
-    border-top-color: #000000;
     border-width: 9px;
     margin-left: -8px;
 }
@@ -239,6 +236,7 @@
     padding: 10px;
     align-items: flex-start;
     flex-direction: column;
+    filter: drop-shadow(rgba(0, 0, 0, 0.3) 0 2px 10px);
 }
 
 
@@ -271,7 +269,10 @@
     justify-content: center;
 }
 
-
+.fa-angle-down {
+    font-size: 20px;
+    transition: all .6s cubic-bezier(0.080, 1.090, 0.320, 1.275);
+}
 
 .yellowOne {
     background-color: yellow !important;
