--- a/src/header.css
+++ b/src/header.css
@@ -6,10 +6,10 @@
 
 .main-container {
     background: #5865f2;
-    color: rgb(255, 255, 255);
+
     width: 100%;
     display: flex;
-    text-shadow: 4px 1px 0px rgba(0, 0, 0, 0.4);
+
 }
 
 .sub-container {
@@ -56,4 +56,10 @@
     display: flex;
     justify-self: flex-end;
     font-size: larger;
+    
+}
+
+.zuru h1 {
+    color: white;
+    text-shadow: 3px 2px 6px rgba(0, 0, 0, 0.4);
 }
